fix spacing on text-based stats boxes
Flexbox :shakes-fist:

--- a/src/artichoke.css
+++ b/src/artichoke.css
@@ -72,7 +72,8 @@ button:active {
 
 .stat-box {
   width: 40%;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
